# char-dither

./: Cargo.toml
src/: main.rs
