[package]
name = "wordle-quant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
dither = "=1.3.7"
#structopt = { version = "0.3", default-features = false }
structopt = "0.3"
anyhow = "1"
